--- a/src/app/components/nodes-view/nodes-view.component.scss
+++ b/src/app/components/nodes-view/nodes-view.component.scss
@@ -68,7 +68,6 @@
 
 .nodes-view {
   width: 100%;
-  height: 100%;
   .mat-mdc-header-cell {
     font-size: 15px;
     font-weight: 500;
